# longpi

./: .formatter.exs  .gitignore  .igniter.exs  .mcp.json  CLAUDE.md  README.md  install.sh  mix.exs  update.sh
.claude/skills/ash-framework/: SKILL.md
.github/workflows/: release.yml
assets/: components.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
assets/css/: app.css
assets/e2e/: smoke.mjs
assets/js/: app.js  ash_rpc.ts  ash_types.ts  index.tsx  rpc-csrf.test.ts  rpc-csrf.ts
assets/js/agent/: ApprovalLevelChip.tsx  AuthStatus.tsx  BuiltinToolUI.tsx  ChatApp.test.ts  ChatApp.tsx  ContextMeter.tsx  EmbedApp.tsx  ExtCommandsContext.tsx  ExtensionUI.test.tsx  ExtensionUI.tsx  LanguageToggle.tsx  ManagementPanel.tsx  MobileChat.tsx  ModelPicker.tsx  ReasoningPicker.tsx  SettingsDialog.tsx  SlashCommandMenu.tsx  SubagentsBar.test.tsx  SubagentsBar.tsx  ThemeToggle.tsx  UpdateCheck.test.tsx  UpdateCheck.tsx  channel.ts  forkpos.test.ts  i18n.test.ts  i18n.tsx  runtime.test.ts  runtime.ts  secrets.test.ts  secrets.ts  settings.ts  slashCommands.ts  store.ts  types.ts  wire-roundtrip.test.ts
assets/js/components/: ErrorBoundary.tsx  model-icons.test.tsx  model-icons.tsx
assets/js/lib/: clipboard.ts
assets/js/test/: render.tsx  setup.ts  vitest.d.ts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: deploy.md  ios-app.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
lib/: longpi.ex  longpi_web.ex
lib/longpi/: accounts.ex  agent.ex  application.ex  auth.ex  extensions.ex  js.ex  jsonc.ex  mailer.ex  release.ex  repo.ex  runtime_config.ex  search.ex  secrets.ex  shell.ex  updater.ex  wasm.ex
lib/longpi/accounts/: api_key.ex  seeder.ex  token.ex  user.ex
lib/longpi/agent/: compaction.ex  compactor.ex  context_window.ex  conversation.ex  conversation_message.ex  edit.ex  extension_secret.ex  extension_ui.ex  llm.ex  message.ex  model.ex  model_alias.ex  model_discovery.ex  permissions.ex  (+23 more)
lib/longpi_web/: auth_overrides.ex  endpoint.ex  gettext.ex  live_user_auth.ex  login_throttle.ex  router.ex  telemetry.ex
native/longpi_js/: Cargo.toml
native/longpi_js/src/: lib.rs
native/longpi_search/: Cargo.toml
native/longpi_search/src/: main.rs
native/longpi_shim/: Cargo.toml
native/longpi_shim/src/: main.rs
native/longpi_wasm/: Cargo.toml
native/longpi_wasm/src/: lib.rs
priv/: config.sample.jsonc
priv/ext_host/: README.md  host.ts
priv/repo/: seeds.exs
priv/wasm/: harness.js  qjs-wasi.wasm
scripts/: build-linux.sh
test/: test_helper.exs
test/longpi/: extensions_lazy_test.exs  runtime_config_test.exs  shell_test.exs  updater_test.exs  wasm_test.exs
test/longpi_web/: auth_gate_test.exs  file_preview_test.exs  fork_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+185 files in other folders)
