[package]
name = "longpi_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "longpi_wasm"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
wasmtime = "27"
wasmtime-wasi = "27"
os_pipe = "1"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
anyhow = "1"

[profile.release]
lto = "thin"
